@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- When emitting alerts or processing digests, deal with 'daily' / 'weekly' /
+  'biweekly' frequencies.
+
 - Added 'weekly' and 'biweekly' digest options for community subscriptions.
 
 3.106 (2013-02-13)
